# Local-IP-Changer-GUI

./: .gitignore  .hintrc  README.md  index.html  package-lock.json  package.json  settings.html
src/: App.tsx  appsettings.tsx  settings.tsx  settingsstyles.css  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/config/: config.json
src-tauri/src/: main.rs
tauri-plugin-awesome/: Cargo.toml
tauri-plugin-awesome/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-awesome/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-awesome/examples/vanilla/src-tauri/src/: main.rs
tauri-plugin-awesome/src/: lib.rs
