[package]
name = "local-ip-changer-gui"
version = "0.0.0"
description = "Local IP Changer GUI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-create", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-utils = "1.5.3"
default-net = "0.22.0"
automattermostatus = "0.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

